<resources>
    <string name="app_name">Controle GLP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cliente">ClienteActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_cad_cliete">CadClieteActivity</string>
    <string name="title_activity_pesq_cliente">PesqClienteActivity</string>
    <string name="title_activity_movimentacao_inicial">MovimentacaoInicialActivity</string>
    <string name="title_activity_movimentacao_entrada">MovimentacaoEntradaActivity</string>
    <string name="title_activity_movimentacao_saida">MovimentacaoSaidaActivity</string>
    <string name="title_activity_movimentacao_nova">MovimentacaoNovaActivity</string>
    <string name="title_activity_relatorio">RelatorioActivity</string>
    <string name="title_activity_relatorio_venda">RelatorioVendaActivity</string>
    <string name="title_activity_pesq_func">PesqFuncActivity</string>
    <string name="title_activity_cad_func">CadFuncActivity</string>
    <string name="title_activity_funcionario">FuncionarioActivity</string>
    <string name="title_activity_produto">ProdutoActivity</string>
    <string name="title_activity_cad_produto">CadProdutoActivity</string>
    <string name="title_activity_pesq_produto">PesqProdutoActivity</string>
    <string name="title_activity_estoque_principal">EstoquePrincipalActivity</string>
    <string name="title_activity_verificar_estoque">VerificarEstoqueActivity</string>
    <string name="title_activity_abrir_estoque">AbrirEstoqueActivity</string>

    <!--String do Funcionario-->

    <string name="titulo_func">Funcionarios</string>
    <string name="titulo_cad_func">Cadastro de Funcionarios</string>
    <string name="titulo_pesq_func">Pesquisa de Funcionarios</string>

    <!--String EditText Funcionario-->

    <string name="edit_nome_func">Nome:</string>
    <string name="edit_cpf_func">CPF:</string>
    <string name="edit_email_func">E-mail:</string>
    <string name="edit_fone_func">Telefone:</string>
    <string name="edit_login_func">Login:</string>
    <string name="edit_matricula_func">Matricula:</string>

    <!--String Hints Funcionario-->

    <string name="hint_nome_func">Digite o nome do funcionario</string>
    <string name="hint_cpf_func">Digite o CPF do funcionario</string>
    <string name="hint_email_func">Digite o e-mail do funcionario</string>
    <string name="hint_fone_func">Digite o telefone do funcionario</string>
    <string name="hint_login_func">Digite o login do funcionario</string>
    <string name="hint_matricula_func">Digite a matricula do funcionario</string>

    <!--String botões do Funcionario-->

    <string name="button_cad">Cadastrar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_pesquisar">Pesquisar</string>
    <string name="button_voltar">Voltar</string>
    <string name="button_chama_tela_cad_func">Cadastrar Funcionarios</string>
    <string name="button_chama_tela_pesq_func">Pesquisar Funcionarios</string>

    <!--Strings do Login-->

    <string name="hint_login">Login</string>
    <string name="hint_ajuda">Ajuda</string>
    <string name="hint_glpcont">GLP CONTROLE</string>
    <string name="hint_entrar">Entrar</string>

    <!--Strings de Erros-->


    <string name="erro_nome">Nome é Obrigatório</string>
    <string name="erro_cpf">CPF é obrigatório</string>
    <string name="erro_email">Email é Obrigatório</string>
    <string name="erro_fone">Telefone é obrigatório</string>
    <string name="erro_login">Login é Obrigatório</string>
    <string name="erro_matricula">Matrícula é obrigatória</string>

    <!--Strings de sucesso-->

    <string name="cad_sucesso">Cadastrado com Sucesso</string>
    <string name="edit_sucesso">Editado com Sucesso</string>

    <!--Menus-->

    <string name="menu_estoque">Estoque</string>
    <string name="menu_movimentaca">Movimentacao</string>
    <string name="menu_relatorios">Relatórios</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_funcionario">Funcionario</string>
    <string name="menu_produto">Produto</string>

    <!--String cadastro Cliente-->

    <string name="edit_razaoSoc">Razão Social</string>
    <string name="edit_cnpj">CNPJ</string>
    <string name="titulo_cadCliente">Cadastro de cliente</string>
    <string name="hint_nomeCliente">Digite o nome do cliente</string>
    <string name="hint_cnpjCli">Digite o CNPJ do cliente</string>
    <string name="hint_email_cliente">Digite o email do cliente</string>
    <string name="hint_fone_cliente">Digite o telefone do cliente</string>
    <string name="hint_razaoS_cliente">Digite Razao Social cliente</string>


    <!-- ENDEREÇOS-->
    <string name="titulo_info_Ende">Informções do Endereço</string>
    <string name="hint_cep">Cep: </string>
    <string name="hint_logradouro">Logradouro: </string>
    <string name="hint_numero">N°: </string>
    <string name="hint_bairro">Bairro: </string>
    <string name="hint_cidade">Cidade: </string>
    <string name="hint_estado">Estado: </string>
    <string name="hint_pais">Pais: </string>


    <!--String Pessoa-->

    <string name="edit_nome">Nome</string>
    <string name="edit_email">Email</string>
    <string name="edit_fone">Telefone</string>

    <!--Strings do produto-->
    <string name="titulo_produtos">Produtos</string>
    <string name="button_cad_prod">Cadastrar Produto</string>
    <string name="button_pesq_prod">Pesquisar Produto</string>
    <string name="titulo_prod">Produtos</string>



</resources>
