<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="#009999"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cad_func"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="#FF5722"
        android:layout_marginBottom="50sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_nome_func"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:layout_marginBottom="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_cpf_func"
            android:textSize="20sp"
            android:textColor="#FF5722"
            android:layout_marginBottom="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_email_func"
            android:textSize="20sp"
            android:textColor="#FF5722"
            android:layout_marginBottom="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_fone_func"
            android:textSize="20sp"
            android:textColor="#FF5722"
            android:layout_marginBottom="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_login_func"
            android:textSize="20sp"
            android:textColor="#FF5722"
            android:layout_marginBottom="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_matricula_func"
            android:textSize="20sp"
            android:textColor="#FF5722"
            android:layout_marginBottom="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_func"
            android:textColorHint="#000"
            android:padding="3dp"
            android:background="#fff"
            android:layout_margin="5sp"
            android:id="@+id/editNome"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cpf_func"
            android:textColorHint="#000"
            android:padding="3dp"
            android:background="#fff"
            android:layout_margin="5sp"
            android:id="@+id/editCpf"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_func"
            android:textColorHint="#000"
            android:padding="3dp"
            android:background="#fff"
            android:layout_margin="5sp"
            android:id="@+id/editEmail"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fone_func"
            android:textColorHint="#000"
            android:padding="3dp"
            android:background="#fff"
            android:layout_margin="5sp"
            android:id="@+id/editFone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login_func"
            android:padding="3dp"
            android:textColorHint="#000"
            android:background="#fff"
            android:layout_margin="5sp"
            android:id="@+id/editLogin"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_matricula_func"
            android:textColorHint="#000"
            android:padding="3dp"
            android:background="#fff"
            android:layout_margin="5sp"
            android:id="@+id/editMatricula"
            />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cad"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="#4dd0e1"
            android:layout_margin="5sp"
            android:onClick="cadastrar"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar"
            android:textSize="20sp"
            android:background="#4dd0e1"
            android:layout_margin="5sp"
            android:onClick="cancelar"
            />
    </LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_voltar"
        android:textSize="20sp"
        android:background="#4dd0e1"
        android:layout_margin="5sp"
        android:padding="20sp"
        android:onClick="voltar"
        />

</LinearLayout>


</LinearLayout>
