<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cad_Produto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="38sp"
        android:layout_gravity="center"
        android:textColor="#FF5722"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cad_prod"
        android:onClick="chamaTelaCadProduto"
        android:layout_marginTop="100sp"
        android:textSize="20sp"
        android:background="#4dd0e1"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pesq_prod"
        android:onClick="chamaTelaPesqProduto"
        android:layout_marginTop="25sp"
        android:textSize="20sp"
        android:background="#4dd0e1"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_voltar"
        android:onClick="voltar"
        android:layout_marginTop="25sp"
        android:textSize="20sp"
        android:background="#4dd0e1"
        />

</LinearLayout>